# nis-py-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: run_pytest.yaml
nisapi/: __init__.py  __main__.py  clean.py  datasets.json  datasets.yaml  socrata.py
nisapi/clean/: __init__.py  akkj-j5ru.json  akkj_j5ru.json  akkj_j5ru.py  helpers.py  k4cb-dxd7.json  k4cb_dxd7.py  ker6-gs6z.json  ker6_gs6z.json  ker6_gs6z.py  ksfb-ug5d.json  ksfb_ug5d.json  ksfb_ug5d.py  si7g-c2bs.json  si7g_c2bs.json  si7g_c2bs.py  sw5n-wg2p.json  sw5n_wg2p.py  udsf_9v7b.py  vdz4-qrri.json  vdz4_qrri.py  vh55-3he6.json  vh55_3he6.json  vh55_3he6.py  vncy-2ds7.json  vncy_2ds7.py
scripts/: clean_example.py  demo.py  demo_clean.py  demo_cloud.py  demo_streamlit.py  secrets_template.yaml
tests/: __init__.py  test_cache.py  test_clean.py  test_datasets.py  test_get_nis.py  test_validate.py
tests/data/: test.parquet
