[tool.poetry]
name = "nisapi"
version = "0.1.0"
description = ""
authors = ["Scott Olesen <ulp7@cdc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.12.0"
platformdirs = "^4.3.6"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^4.0.1"
detect-secrets = "^1.5.0"
streamlit = "^1.40.1"


[tool.poetry.group.scripts.dependencies]
altair = "^5.4.1"
vl-convert-python = "^1.7.0"
azure-identity = "^1.19.0"
azure-storage-blob = "^12.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
