[project]
name = "nisapi"
version = "1.0.1"
description = ""
authors = [{ name = "Scott Olesen", email = "ulp7@cdc.gov" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "polars>=1.12.0,<2",
    "platformdirs>=4.3.6,<5",
    "pyyaml>=6.0.2,<7",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
    "pre-commit>=4.0.1,<5",
    "detect-secrets>=1.5.0,<2",
    "streamlit>=1.40.1,<2",
]
scripts = [
    "altair>=5.4.1,<6",
    "vl-convert-python>=1.7.0,<2",
    "azure-identity>=1.19.0,<2",
    "azure-storage-blob>=12.24.0,<13",
]

[tool.uv]
default-groups = [
    "dev",
    "scripts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
